client/src/styles/App.css
/* ... */
#comment-form {
  padding: 20px;
}

#comment-form textarea {
  margin-bottom: 15px;
}

.comment-spacing p {
  line-height: 25px;
  padding: 5px;
}

.comment-spacing {
  padding: 10px;
  width: 100%;
}

/* blog */

.blog-description {
  padding: 0 10px;
}

.blog-body {
  padding: 20px;
  margin: 40px 20px;
  font-size: 1.3em;
  line-height: 1.4em;
}

.blog-body p {
  padding: 0 10px;
}

.blog-body pre {
  background: black;
  color: white;
}

.image-sizing {
  width: 80%;
}


/* Blog WYSIWGI */

.ql-editor {
  min-height: 400px;
}

/* Footer */

.footer {
  display: flex;
  justify-content: space-between;
  background-color: #e8e8e8;
  padding: 10px;
  
}

.footer p {
  font-size: 1.2em;
  font-weight: 700;

}

.icons {
  font-size: 1.8em;
}

.icons i {
  padding: 10px;
  margin: 5px;
}

/* Model Login Buttons */

.section-column {
  display: flex;
  flex-direction: row;
}

#or {
  margin: 0 auto;
  padding-top: 10px;
}

.login-buttons {
  padding: 10px;
}

.login-buttons a {
  color: white;
}

.login-buttons button {
  width: 58vw;
}

.column {
  padding: 20px;
}

.form {
  padding-top: 30px;
}

.button {
  padding: 10px;
}

/* Sign Up Form */

.signup-form {
  padding: 40px;
  margin: 10% 40px;
  background: rgb(243, 243, 243);
  border-radius: 4px;
  box-shadow: -2px 3px 20px 4px #acadab ;
}

.signup-form fieldset {
  margin: 10px 0;
  padding: 20px 0;
}

.signup-btns {
  margin: 10px 10px 10px 0;
}

.signup-btn {
  padding-right: 10px;
}

.signup-btn a {
  color: white;
}

/* Blog Posts */

.blog-card {
  width: 30%;
}

.blog-card p {
  height: 80px;
  padding: 0 20px;
}

.ui.raised.segment {
  margin: 0 20px 20px 20px;
}

.blog-cards {
  display: flex;
  flex-direction: row;
  flex-wrap: wrap;
  margin: 30px;
}

pre {
  padding: 10px;
}

.blog-image {
  width: 100%;
  height: 50vh;
  padding: 20px;
}

.post-details {
  display: flex;
  flex-direction: row;
  justify-content: space-between;
  padding: 10px;
}

.blog-inputs {
  padding: 8px;
}

.form-buttons {
  padding-top: 20px;
}

.add-blog {
  padding: 8px;
}

/* Like Buttons */

.like-buttons {
  background: none;
  border: none;
  padding: 0;
  cursor: pointer;
}

.likes {
  padding: 20px;
}

@media only screen and (max-width: 1030px){

  .website {
    display: flex;
    flex-direction: column-reverse;
  }

  .projects {
    padding-top: 5px;
  }

  .site-pic {
    width: 100%;
    padding-bottom: 20px;
    height: 60vh;
  }

  .ui.raised.segment {
    width: 90%;
  }
}

.ui.standard.modal {
  width: 50%;
}

@media only screen and (min-width: 1020px){

  .collages img {
    width: 100%;
    height: 100%;
  }
}


/* About */

body {
  font-family: 'Montserrat', sans-serif;
}

.favorites {
  display: flex;
  flex-direction: column;
}

.box {
  margin: auto;
  width: 80%;
  padding: 30px;

}

.box h1 {
  padding: 16px;
}

.box p {
  padding: 0 28px;
  line-height: 25px;
}

.section {
  border-bottom: 3px solid black;
  width: 80%;
  padding-top: 20px;
  margin: auto;
}

.book-img {
  height: 300px;
  width: 200px;
  box-shadow: 8px 8px 18px rgb(71, 71, 71);
}

.album-img {
  height: 400px;
  width: 400px;
  box-shadow: 8px 3px 15px rgb(63, 58, 58);
}

/* favorites */

.list-sections {
  padding: 20px;
}

.list-item {
  height: 100px
}

.lists {
  display: flex;
  flex-direction: column;
  justify-content: space-around;
  padding-top: 20px;
  margin: 0 5%;
}

.lists i {
  font-size: 3.4em;
  margin: 0 auto;
}

.lists h2 {
  margin: 0 auto;
}

.lists ol { 
  line-height: 2.4em;
}

.lists li {
  margin: 16px;
  font-size: 1.4rem;
}

@media only screen and (max-width: 670px){
  .box {
    width: 100%;
    margin: 0;
    padding: 0;
  }

  .box h3 {
    width: 80%;
  }

  .album-img {
    height: 200px;
    width: 200px;
  }
}

@media only screen and (min-width: 1100px){


  .list-sections {
    display: flex;
    flex-direction: row;
    flex-wrap: wrap;
    padding: 40px 0 40px 60px;
    width: 50%;
  }

  .list-sections.music {
    margin: 0 auto;
    padding-left: 0;
  }

  .list-sections.music ol {
    padding: 0;
  }

  .album-img {
    width: 600px;
    height: 600px;
  }


  .lists-sections ol {
    margin: 0;
  }

  .lists-sections ol li {
    padding: 0;
  }

  .favorites-lists {
    display: flex;
    flex-direction: row;
  }
}

/* Home Page Cover Image */

.cover {
  background-image: url('../images/10-brightest-stars.jpg');
  background-size: cover;
  background-repeat: no-repeat;
  background-attachment: fixed;
  background-position: top; 
  padding: 140px 20px 80px 20px;
  max-width: 1280px;
}

.cover h1 {
  color: #93ecb5;
  margin: 0;
  padding: 0;
  font-size: 8vw;
  font-weight: 800;
  padding-top: 0;
}

.cover p {
  color: #93ecb5;
  font-size: 22px;  
}


@media only screen and (max-width: 1340px){
  .cover h1 {
    padding-top: 10vh;
  }

  .cover {
    height: 70%;
  }
}

@media only screen and (max-width: 680px){
  .cover {
    height: 400px;
    padding-top: 0;
  }

  h2 {
    padding-bottom: 0;
  }

  .sub-head, .tweets-copy p {
    margin: 0 2%;
    text-align: left;
  }
}

/* Music Page */

.playlist {
  height: 100vh;
}

/* Picture */

.container {
  margin: 8% auto;
  max-width: 1280px;
  min-height: 80vh;
}

h1 {
  font-size: 3.4rem;
}

.photos {
  margin: 3%;
  align-content: center;
  display: flex;
  flex-wrap: wrap;
  flex-direction: row;
}

.photos img {
  border: 1px solid rgb(221, 218, 218);
  padding: 14px 14px 60px 14px;
  margin: 10px;
  width: 31%;
  box-shadow: 8px 8px 18px rgb(71, 71, 71);
}


@media only screen and (max-width: 1020px){
  .photos {
    width: 100%;
    margin: 0 auto;
  }

  .photos img {
    width: 400px;
    height: 400px;
    margin: 10px auto;
  }
}
/* ... */

